src/test/deca/context/valid/sansObj/readint-float.deca
// Description:
//          Affectation d'un readInt() à un float, et donc conversion de la valeur en float
//
// Résultat:
//          Succès
{
    float a;
    a = readInt();
}
