src/test/deca/context/invalid/Obj/eq-int-class.deca
// Description:
//    Comparaison entre un entier et une classe
//
// Résultat:
//Comparaison entre deux membres incompatibles
//
class A {
}
{
    A a;
    if (a == 89){}
}